--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -6,12 +6,13 @@
 
   <link rel="shortcut icon" type="image/png" href="lib/jasmine-1.3.0/jasmine_favicon.png">
   <link rel="stylesheet" type="text/css" href="lib/jasmine-1.3.0/jasmine.css">
+  <script type="text/javascript" src="../libs/jquery.js"></script>
   <script type="text/javascript" src="lib/jasmine-1.3.0/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine-1.3.0/jasmine-html.js"></script>
+  <script type="text/javascript" src="lib/jasmine-jquery.js"></script>
 
   <!-- include source files here... -->
   <link rel="stylesheet" type="text/css" href="../jquery.filthypillow.css">
-  <script type="text/javascript" src="../libs/jquery.js"></script>
   <script type="text/javascript" src="../libs/moment.js"></script>
   <script type="text/javascript" src="../jquery.filthypillow.js"></script>
 
@@ -46,19 +47,11 @@
       }
 
     })();
-  </script>
-
+  </script> 
 </head>
 
 <body>
-  <input class="filthypillow-1"/>
-  <input class="filthypillow-2"/>
-  <input class="filthypillow-3"/>
-  <input class="filthypillow-4"/>
-  <input class="filthypillow-5"/>
-  <input class="filthypillow-6"/>
-  <input class="filthypillow-7"/>
-  <input class="filthypillow-8"/>
-  <input class="filthypillow-9"/>
+  <div id="jasmine-fixtures"></div>
+ 
 </body>
 </html>
