Fixes link to tests

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ $( ".datetime" ).on( "fp:save", function( e, dateObj ) {
 <h3>getDate( ): DateObj</h3>
 
                 <h2><a name="tests" class="anchor" href="#api"><span class="octicon octicon-link"></span></a>Tests</h2>
-                <p>Run tests <a href="/tests">here</a>.</p>
+                <p>Run tests <a href="/jquery.filthypillow/tests">here</a>.</p>
                 </section>
 
                 <footer>
