Update documentation and tests to reflect v1.1.0

--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@ maxDateTime: function( ) {
   return moment( ).add( "days", 7 ); //7 days from now
 }
 {% endhighlight %}
+<h3>steps</h3>
+<p>Disable/enable steps by passing an array. Removing steps will prevent the user from activating that step (by clicking or using left/right arrows), but it will not hide the step (which should be done in CSS).</p>
+<h4>Default</h4>
+<p>[ "month", "day", "hour", "minute", "meridiem" ]</p>
 <h2><a name="events" class="anchor" href="#events"><span class="octicon octicon-link"></span></a>Events</h2>
 <h3>fp:save</h3>
 <p>Passes selected date object.</p>
