--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@ maxDateTime: function( ) {
 <p>Disable/enable steps by passing an array. Removing steps will prevent the user from activating that step (by clicking or using left/right arrows), but it will not hide the step (which should be done in CSS).</p>
 <h4>Default</h4>
 <p>[ "month", "day", "hour", "minute", "meridiem" ]</p>
+<h3>enableCalendar</h3>
+<p>Show the calendar when steps day or month are activated.</p>
+<h4>Default</h4>
+<p>true</p>
 <h2><a name="events" class="anchor" href="#events"><span class="octicon octicon-link"></span></a>Events</h2>
 <h3>fp:save</h3>
 <p>Passes selected date object.</p>
